app/nginx/0-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name:  development
  labels:
    monitoring: prometheus
    istio-injection: enabled
