app/nginx/1-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1   # Number of Nginx pods to run
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        version: 1
        istio: monitor
    spec:
      containers:
      - name: nginx
        image: nginx:latest   # Nginx Docker image
        ports:
        - containerPort: 80   # Port to expose on the Nginx container
