app/nginx/2-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: development
spec:
  selector:
    app:  nginx
  ports:
  - name: nginx
    port:  80
    targetPort:  80
