app/nginx/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        version: v1
        istio: monitor
    spec:
      containers:
      - name: nginx
        image: nginx:latest   
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Namespace
metadata:
  name:  development
  labels:
    monitoring: prometheus
    istio-injection: enabled
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: development
spec:
  selector:
    app:  nginx
  ports:
  - name: nginx
    port:  80
    targetPort:  80
