app/nginx/4-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: development
spec:
  hosts:
    - nginx
  http: 
    - route:
      - destionation:
          host: nginx
          subsets: v1
